--- a/memo/index.html
+++ b/memo/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>メモ</title>
+  <title>メモアプリ</title>
   <style>
     body {
       background-color: #ffffff;
@@ -13,7 +13,11 @@
 
     .container {
       display: flex;
-      height: 100vh;
+      height: 90vh;
+      margin: 2rem; /* ← 左・上の余白追加 */
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
 
     .left-panel {
